extract creation of dummy data to method